# morok

./: .gitignore  CMakeLists.txt  README.md  cross_build.sh  foo.toml
.github/: llvm-trunk.env  llvm-version.env
.github/workflows/: ci.yml  deploy.yml  llvm-bump.yml
crackmes/zorya/: AUTHORS_NOTE.md  PLAYME.txt  README.txt  SECURITY_ANALYSIS.md  build-morok.sh  build.sh  keygen.c  license.txt  morok-linux-dynamic.toml  morok-linux-static.toml  tweetnacl.c  tweetnacl.h  zbanner.h  zcommon.h  zorya.c  zorya.sk  zpub.h
docs/: algorithms.md  hardness.md  insurance-tasks.md  objections.md  roadmap.md
programs/: cf_license_crackme.c  cf_rorog.c  int_woma_keygen.c
runtime/: native_pack.ld  native_pack_loader.c  native_pack_meta.S
src/config/: Preset.cpp  Resolver.cpp  TomlLoader.cpp
src/core/: Entropy.cpp
src/ir/: Annotations.cpp  ControlFlowFlattener.cpp  IRRandom.cpp  Reg2Mem.cpp  SymbolCloak.cpp
src/packer/: CMakeLists.txt  Main.cpp  NativePack.cpp
src/passes/: AdversarialFunctionMerging.cpp  AdversarialSelfTuning.cpp  AliasOpaquePredicates.cpp  AntiAnalysis.cpp  ArithmeticTables.cpp  BogusControlFlow.cpp  CMakeLists.txt  CallerKeyedDispatch.cpp  ChaosStateMachine.cpp  CoherentDecoys.cpp  ConstantEncryption.cpp  DataFlowIntegrity.cpp  DecoyStrings.cpp  DispatcherlessRouting.cpp  EnvBindingKdf.cpp  ExternalOpaquePredicates.cpp  ExternalSecretBinding.cpp  Flattening.cpp  FunctionCallObfuscate.cpp  FunctionFission.cpp  FunctionWrapper.cpp  HashGatedSelfDecrypt.cpp  IndirectBranch.cpp  Mba.cpp  MicrocodeStress.cpp  (+26 more)
tools/: morok-audit.py  morok_elf_shadow.py
(+199 files in other folders)
